/*
 * $Id: ChangeLog,v 1.2437 2004/03/01 22:00:37 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-01 15:03 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    * Enahnced hb_vmOperatorCall() to accept 4th optional PHB_ITEM argument.
    + Added Array[Index] operator overloading support in hb_vmArrayPush() and hb_vmArrayPop().

  * source/vm/classes.c
    + Added [] operator overloading support.

  * source/rtl/win32ole.prg
    + Added Method Collection( xIndex, xValue ) OPERATOR "[]"

2004-03-02 05:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * include/hbapifs.h
  * source/rtl/direct.c
    ! replace *.* with DIR_ALL_FILES_MASK macro.
    - remove over-paste from my local work file.
    % optimized by using HB_ITEM

  * contrib/hbzlib/zip.c
    ! modification in accordance with the above changes

2004-03-01 17:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/direct.c
    ! minor optimization on dot checkings.

2004-03-01 15:20 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/rtl/teditor.prg
    * Optimized to avoid any occurance of recusion.

  * xharbour/debug/tbrwtext.prg
    - Removed Up(), Down(), PageUp(), PageDown(), Left(), Right(), GoTop(), GoBottom() Methods
      in Class TBrwText causing recursion as the same were introduced in TEditor() recently.

    /* I am sorry, I could not preceive TEditor() was being used in Debugger as I never use it.
       If TEditor() class is inherited in some other classes let me know.
       Phil and Paul, will you please confirm if my changes are correct!
    */

2004-03-01 04:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/achoice.prg
    * if an xSelect array is passed in and it's not the same length as the
    * acItems array, then resize alSelect to match.
